cabal-version: 1.12

name:           git-align
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ben-jl/git-align#readme>
homepage:       https://github.com/https://github.com/ben-jl/git-align#readme
bug-reports:    https://github.com/https://github.com/ben-jl/git-align/issues
author:         Ben LeValley
maintainer:     ben.levalley@gmail.com
copyright:      2021 Ben LeValley
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/https://github.com/ben-jl/git-align/git-align-core

library
  exposed-modules:
      Gitalign
  build-depends: base >= 4.10 && < 5
    , text >= 1.2.0.0 && < 1.3
    , unordered-containers >= 0.2.10 && < 0.3
    , hashable >=1.3.0.0 && < 1.4
    , bytestring >= 0.10.12.0 && < 0.11
    , call-stack
    , HUnit
    , containers
    , graphite
    , graphviz
  other-modules: Gitalign.Types
  hs-source-dirs: ., ./Gitalign
  default-language: Haskell2010
  default-extensions: 
    EmptyCase
    , FlexibleContexts
    , FlexibleInstances
    , InstanceSigs
    , MultiParamTypeClasses
    , LambdaCase
    , MultiWayIf
    , NamedFieldPuns
    , TupleSections
    , BangPatterns
    , KindSignatures
    , TypeOperators
    , OverloadedStrings
    , ScopedTypeVariables
    , TypeApplications
    , ConstraintKinds
    , RankNTypes

Test-Suite test-git-align
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Test.ConstructorSpec
  hs-source-dirs: test/, test/Test/
  build-depends:
    base >= 4.10 && < 5
    , git-align
    , text >= 1.2.0.0 && < 1.3
    , unordered-containers >= 0.2.10 && < 0.3
    , hashable >=1.3.0.0 && < 1.4
    , bytestring >= 0.10.12.0 && < 0.11
    , HUnit
    , call-stack
    , containers
    , graphite
    , graphviz
  default-language: Haskell2010
  default-extensions: 
    EmptyCase
    , FlexibleContexts
    , FlexibleInstances
    , InstanceSigs
    , MultiParamTypeClasses
    , LambdaCase
    , MultiWayIf
    , NamedFieldPuns
    , TupleSections
    , BangPatterns
    , KindSignatures
    , TypeOperators
    , OverloadedStrings
    , ScopedTypeVariables
    , TypeApplications
    , ConstraintKinds
    , RankNTypes   
